tests/syntax-error/DataTypeSignature.vix
type Bool where
  False True : Bool

Bool : Type
